<resources>
    <string name="app_name">Megaworxx App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="firebase_main_topic">megaworxx_main_topic</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name">Calvin Masindi</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_location_permission">Location</string>
    <string name="text_location_permission">Application requires location permission to be granted to be able to check in and out.</string>

    <string name="menu_home">Home</string>
    <string name="menu_message">Messages</string>
    <string name="menu_campaign">Campaigns</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="placeholder_email">calvin@doosy.co.za</string>
    <string name="placeholder_password">Masoft@30</string>
    <string name="forgot_password_text"><u>Forgot Password?</u></string>
    <string name="active_campaigns_desc">Active Campaigns</string>
    <string name="active_campaigns_val">23</string>
    <string name="total_hours_worked_desc">Total Hours Worked</string>
    <string name="total_hours_worked_val">160 Hrs</string>
    <string name="todayCampaignText">Today\'s Campaigns</string>
    <string name="campaignName">Samsung J21 Promo at Menlyn</string>
    <string name="check_in_text">Check in</string>
    <string name="check_out_text">Check out</string>
    <string name="tab_survey">Survey</string>
    <string name="tab_stock">Stock</string>
    <string name="tab_feedback">Feedback</string>
    <string name="tab_sales">Sales</string>
    <string name="default_notification_channel_id">10103</string>


    <string name="nav_action_home">Home</string>
    <string name="nav_action_campaign">Campaigns</string>
    <string name="nav_action_messages">Messages</string>
    <string name="nav_action_profile">Profile</string>
    <string name="campaign_date">Date: %1$s</string>
    <string name="campaign_check_in_time">Check-in time: %1$s</string>
    <string name="campaign_check_out_time">Check-out time: %1$s</string>
    <string name="survey_item">Customer satisfaction survey</string>
    <string name="feedback_item">Customer satisfaction feedback</string>


    <string name="feedback_answers_header">Feedback Answers</string>
    <string name="survey_answers_header">Survey Answers</string>

    <string name="add_survey_title">Add survey</string>
    <string name="add_stock_title">Add stock</string>
    <string name="add_feedback_title">Add feedback</string>
    <string name="add_sale_title">Add sale</string>

    <string name="new_survey_header">New Survey</string>
    <string name="new_gadget_header">Add Gadget/Stock</string>
    <string name="new_sales_header">Add Sale</string>
    <string name="new_feedback_header">New Feedback</string>

    <string name="key_form_id">key_form_id</string>
    <string name="key_campaign_model">campaignModel</string>
    <string name="key_campaign">campaign</string>
    <string name="key_survey">survey</string>
    <string name="key_promoter">promoter</string>

    <string name="key_campaign_page_type">questionnaire_type</string>
    <string name="key_campaign_stock_sale_data">key_campaign_stock_sale_data</string>

    <string-array name="check_success">
        <item>Success</item>
        <item>You have been successfully checked in.</item>
        <item>You have been successfully checked out.</item>
    </string-array>

    <string-array name="check_error">
        <item>Error</item>
        <item>Something happened trying to check in, please try again later.</item>
        <item>Something happened trying to check out, please try again later.</item>
    </string-array>

    <string name="general_error_message">Something went wrong, please try again.</string>
    <string name="stock_toolbar_text">Samsung J21 Promo at Menlyn</string>
    <string name="message_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam phasellus vestibulum lorem sed risus ultricies tristique. Ultricies mi quis hendrerit dolor magna.</string>

    <string-array name="client_token">
        <item>client_credentials</item>
        <item>VehicleManagementAPI</item>
    </string-array>

    <string name="txt_retry"> <u>Retry</u> </string>

    <string name="short_question">enim diam vulputate ut pharetra sit amet aliquam id diam?</string>
    <string name="medium_question">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..?</string>
    <string name="long_question">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet est placerat in egestas erat.?</string>


</resources>