<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/campaignFragmentDate"
            android:layout_marginTop="@dimen/campaign_date_vertical_margin"
            android:layout_marginBottom="@dimen/campaign_time_vertical_margin"
            android:textStyle="bold"
            android:padding="@dimen/campaign_date_padding"
            android:textAlignment="center"
            android:textSize="@dimen/campaign_date_text_size"
            android:textColor="@color/colorPrimary"
            android:text="@string/campaign_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <LinearLayout
        android:id="@+id/checkStatusLayout"
        android:gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginEnd="2dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:visibility="gone"
                android:id="@+id/imgCheckInStatus"
                android:src="@drawable/ic_status_green"
                android:layout_width="10dp"
                android:layout_height="10dp" />
            <TextView
                android:id="@+id/tvCheckInTime"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2dp"
                android:maxLines="1"
                android:layout_marginTop="@dimen/campaign_time_vertical_margin"
                android:layout_marginBottom="@dimen/campaign_time_vertical_margin"
                android:textStyle="normal"
                android:padding="@dimen/campaign_date_padding"
                android:textAlignment="textEnd"
                android:textSize="@dimen/check_in_time_text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/campaign_check_in_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="2dp"
            android:gravity="center_vertical|start"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:visibility="gone"
                android:id="@+id/imgCheckOutStatus"
                android:src="@drawable/ic_status_red"
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tvCheckOutTime"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2dp"
                android:maxLines="1"
                android:layout_marginTop="@dimen/campaign_time_vertical_margin"
                android:layout_marginBottom="@dimen/campaign_time_vertical_margin"
                android:textStyle="normal"
                android:padding="@dimen/campaign_date_padding"
                android:textAlignment="textStart"
                android:textSize="@dimen/check_in_time_text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/campaign_check_out_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCampaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:id="@+id/noContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <include layout="@layout/view_no_content" />
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>